--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "YordanovDY",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
